--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <Main-Class>com.github.Joao_Severgnini.leetcode.LeetcodeFetcher</Main-Class>
+              <Main-Class>com.github.Joao_Severgnini.leetcode.LeetCodeFetcher</Main-Class>
             </manifestEntries>
           </archive>
         </configuration>
@@ -75,16 +75,30 @@
           <shadedClassifierName>all</shadedClassifierName>
         </configuration>
       </plugin>
- <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-surefire-plugin</artifactId>
-      <version>3.0.0-M5</version> <!-- Ou uma versão mais recente -->
-      <configuration>
-        <includes>
-          <include>**/LeetCodeFetcherTest.java</include>
-        </includes>
-      </configuration>
-    </plugin>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-shade-plugin</artifactId>
+  <version>3.2.1</version>
+  <executions>
+    <execution>
+      <phase>package</phase>
+      <goals>
+        <goal>shade</goal>
+      </goals>
+    </execution>
+  </executions>
+  <configuration>
+    <createDependencyReducedPom>false</createDependencyReducedPom>
+    <shadedArtifactAttached>true</shadedArtifactAttached>
+    <shadedClassifierName>all</shadedClassifierName>
+    <transformers>
+      <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+        <mainClass>com.github.Joao_Severgnini.leetcode.LeetCodeFetcher</mainClass>
+      </transformer>
+    </transformers>
+  </configuration>
+</plugin>
+
     </plugins>
   </build>
 </project>
